[package]
name        = "portunes"
version     = "0.0.1"
description = "Generate passwords"
authors     = ["Casey Rodarmor <casey@rodarmor.com>"]
license     = "WTFPL OR MIT OR Apache-2.0"
homepage    = "https://github.com/casey/portunes"

[dependencies]
clap        = "^2.20.1"
error-chain = "^0.10.0"
rand        = "^0.3.15"
